test/Feature/Output/KleeReportError.c.tmp.klee-out/test000004.pc
array unnamed[4] : w32 -> w8 = symbolic
array unnamed_1[4] : w32 -> w8 = symbolic
(query [(Eq false
             (Eq 0
                 (ReadLSB w32 0 unnamed)))
         (Eq false
             (Eq 0
                 (ReadLSB w32 0 unnamed_1)))]
        false)
